--- a/views/index.mustache
+++ b/views/index.mustache
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bookbags</title>
+
   </head>
   <body>
     <h1>Bookbags</h1>
@@ -18,5 +19,7 @@
 {{/use}}
 <h4>Description: {{description}}</h4>
 {{/model}}
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
   </body>
 </html>
